--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
 	<h1>Pricing Card</h1>
 	<p>Price: Rs.200</p>
 	<p>Description: Lorem<br> ipsum dolar sim amet,<br> consectetur adipiscing<br> elit.</p>
+	<button>Buy Now</button>
 </div>
 </body>
 
