--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<div align="center">
-	<img src="https://wallpapers.com/images/hd/love-nature-red-heart-tree-bgapx6bft53nc8ew.jpg" alt="flower" width="300">
+<div>
+	<img src="https://wallpapers.com/images/hd/love-nature-red-heart-tree-bgapx6bft53nc8ew.jpg" alt="flower" width="300" height="200">
 	<h1>Pricing Card</h1>
 	<p>Price: Rs.200</p>
 	<p>Description: Lorem<br> ipsum dolar sim amet,<br> consectetur adipiscing<br> elit.</p>
-	<button>Buy Now</button>
+	<button id="btn">Buy Now</button>
 </div>
 </body>
 
